# seqtrees

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish.yml
docs/: api.md  comparison.md  diagrams.md  examples.md  index.md  references.bib  requirements.txt  theoretical_background.md
docs/css/: math.css
docs/diagrams/: class_overview.puml  sequential_synthesis.puml
examples/: basic_usage.py  medical_dataframe_seqtrees.ipynb  medical_ifcfill_seqtree.ipynb  medical_ifcfill_seqtrees.ipynb  simple_seqtree.ipynb  simple_seqtrees.ipynb
src/seqtree/: _distributions.py  _lightgbm_tree.py  _sklearn_tree.py  _tree.py  _utils.py  synthesizer.py
src/seqtrees/: __init__.py  _backends.py  _distributions.py  _lightgbm_tree.py  _parallel.py  _sklearn_tree.py  _tree.py  _utils.py  synthesizer.py
tests/: test_synthesizer.py
