[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "seqtree"
version = "0.1.0"
description = "Sequential tree models for tabular synthetic data generation"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "SeqTree contributors" }
]
keywords = ["synthetic-data", "tabular-data", "decision-tree", "privacy", "sequential-model"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]
docs = [
  "mkdocs>=1.6,<2",
  "mkdocstrings[python]>=0.25,<1",
  "mkdocs-bibtex>=2,<3",
  "pymdown-extensions>=10,<11",
]
examples = ["jupyterlab>=4", "pandas>=2", "ifcfill>=0.1"]
pandas = ["pandas>=2"]
sklearn = ["scikit-learn>=1.3"]
lightgbm = ["lightgbm>=4.0"]
fast = ["pandas>=2", "scikit-learn>=1.3", "lightgbm>=4.0"]

[project.urls]
Homepage = "https://github.com/seqtree/seqtree"
Documentation = "https://github.com/seqtree/seqtree/tree/main/docs"
Issues = "https://github.com/seqtree/seqtree/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
