[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "seqtrees"
version = "0.2.0"
description = "Sequential tree models for tabular synthetic data generation"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
  { name = "SeqTrees contributors" }
]
keywords = ["synthetic-data", "tabular-data", "decision-tree", "privacy", "sequential-model"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["ifcfill==0.3.4"]

[project.optional-dependencies]
dev = ["pytest>=8"]
docs = [
  "mkdocs>=1.6,<2",
  "mkdocstrings[python]>=0.25,<1",
  "mkdocs-bibtex>=2,<3",
  "pymdown-extensions>=10,<11",
]
examples = ["jupyterlab>=4", "pandas>=2"]
pandas = ["pandas>=2"]
sklearn = ["scikit-learn>=1.3"]
lightgbm = ["lightgbm>=4.0"]
fast = ["pandas>=2", "scikit-learn>=1.3", "lightgbm>=4.0"]

[project.urls]
Homepage = "https://github.com/EulerLettersAI/seqtrees"
Documentation = "https://eulerlettersai.github.io/seqtrees/"
Issues = "https://github.com/EulerLettersAI/seqtrees/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
